# iamchilla-myid

./: 0_🥷_ChillaMyID_v1.py  Dockerfile  README.md  pyproject.toml  requirements.txt  sh00-set-environment.sh  sh01-poetry-initialization.sh  sh01b-venv-notused.sh  sh02-streamlit.sh  sh03-cloudrun.sh  sh05-cloudenvironment.sh  version.txt
myfunctions/: f_callgemini_vertexai.py  f_callimagen_vertexai.py  f_callstorage_utility.py
pages/: 1_💬_Chat_with_Chilla-AI.py  2_🖥️_Image_Creation_by_AI.py  3_🪄_Upload_Your_Photo.py  99_🙎‍♂️_About_this_Application.py
